Sat Mar  8 06:59:25 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/WorkspaceCreator.pm:
          Reverted the changes to make the workspace creator case
          insensitive, it doesn't work for all case, probably because
          part of the lookup is done on hashed values. I am going to
          explicitly list a project name in the files that cause
          the problems on VMS

Fri Mar  7 20:27:25 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26wrproject.mpd:
          Don't use fullpath for includes

        * modules/WB26WRPROJECTWorkspaceCreator.pm:
          Generate a wb26projects.lst that lists the projects that are
          generated

Fri Mar  7 18:17:25 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/WorkspaceCreator.pm:
          When we give a warning, make sure we present the user the
          mixed case name, thanks to Adam Mitz for noticing this

Fri Mar  7 14:51:25 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/WorkspaceCreator.pm:
          Only retrieve the onVMS value only once. Made the handling
          of the after keyword case insensitive. If you have a project
          idl and after += IDL this will work now. This is needed
          because on OpenVMS all filenames are returned lower case by perl
          and the after specified by the user is mixed case which
          resulted in the fact that the after just didn't work
          on OpenVMS. Thanks to Chad Elliot for reviewing the patches
          and point out the possible performance problems of my
          original changes

Thu Mar  6 15:16:25 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/WorkspaceCreator.pm:
          Use method from base class to check whether we run on VMS or not

Wed Mar  5 14:40:20 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * config/xsc_base.mpb:
        * config/xsc_cxx.mpb:
        * config/xsc_idl.mpb: