@@ -1,3 +1,8 @@
+Sun Mar  9 07:54:25 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * modules/WB26WRPROJECTWorkspaceCreator.pm:
+          Make sure we always generate a full path for the project files
+
 Sat Mar  8 06:59:25 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * modules/WorkspaceCreator.pm:
